--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,5 +28,12 @@ jobs:
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
       run: |
-        coverage run manage.py test && coverage report --fail-under=88
+        coverage run manage.py test && coverage report --fail-under=88 && coverage xml
+    - name: Report coverage to codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
+        directory: ./coverage/reports/
+        fail_ci_if_error: true
 
