--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,8 @@ jobs:
       run: |
         coverage run manage.py test && coverage report --fail-under=88 && coverage xml
     - name: Report coverage to codecov
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
